--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,13 @@
 
 * {
   box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
+@media screen and (prefers-reduced-motion: reduce) {
+	* {
+		scroll-behavior: auto;
+	}
 }
 
 body {
